--- a/css/style.css
+++ b/css/style.css
@@ -83,12 +83,10 @@ a {color:#000; text-decoration:none;}
   
 /* layout */
 
-body, html {background-color:#d0d0c3; font-family: 'century','Courier New', Courier, monospace;}
+body, html {background-color:#efe3c6; font-family: 'century','Courier New', Courier, monospace;}
 .ly-page {display: flex; box-sizing:border-box; height:100vh;}
-.wrap-mainTit {display:flex; position:fixed; padding:0 20px; height:100%; box-sizing:border-box; align-items:center; }
-.txt-mainTit {letter-spacing:3px; text-orientation: upright; writing-mode: vertical-rl; font-weight:normal; font-family: 'Quesha','Courier New', Courier, monospace;}
-.txt-mainTit a {font-size:80px; letter-spacing:33px; font-weight:normal; font-family: 'Quesha','Courier New', Courier, monospace;}
-.mb-logo {display:none;}
+.wrap-mainTit {display:flex; width:100%; padding:0 20px; height:100%;  justify-content: center; box-sizing:border-box; align-items:center;}
+.txt-mainTit a {font-size:40px; letter-spacing:14px; font-weight:normal;}
 
 .wrap-nav {position:absolute; top:0; right:0; left:0; height:auto;}
 .wrap-nav h2 {position:relative; margin-bottom:30px;}
@@ -184,265 +182,10 @@ html {
 
 /* media query */
 
-@media (max-width: 1560px) {
-
-  .ly-page.type-project {display:flex;}
-  .ly-page.type-project .txt-mainTit.hide {display:block; writing-mode: vertical-rl; }
-  .ly-page.type-project .txt-mainTit a {font-size:80px !important; letter-spacing:33px;}
-  .wrap-gallery.type-project {padding:62px 288px 0 0; margin:0 0 0 300px;}
-  .wrap-gallery {display:block; margin:120px 0 0 0; padding:0 0 30px 0; box-sizing:border-box;}
-  .detail-project {width:100%; padding:150px 0 0 0;}
-
-  .ly-page {display: block;}
-  .wrap-nav h2 {position:relative; height:80px;}
-  .wrap-nav h2 a {font-family: 'Quesha','Courier New', Courier, monospace;}
-
-  .wrap-mainTit.type-sub {justify-content: flex-start;}
-  .ly-page.type-mb a.link-mbsub {position:absolute; top:20px; left:20px; width:180px; z-index:999;}
-
-  .ly-page.type-mb .txt-mainTit.hide,
-  .ly-page.type-mb a.link-mbsub.hide,
-  .ly-page.type-mb .wrap-nav ul.hide {display:none;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo {display:block; position:absolute; top:14px; right:20px; z-index:999;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo span {position:absolute; top:0; right:0; font-size:30px; opacity:0; font-weight:normal;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo span.txt-04 {opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-01 {animation: alignRight01 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-02 {animation: alignRight02 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-03 {animation: alignRight03 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-05 {animation: alignTop05 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-06 {animation: alignTop06 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-07 {animation: alignTop07 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-08 {animation: alignTop08 1s alternate ease-in-out; opacity: 0;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-project span.txt-09 {animation: alignTop09 1s alternate ease-in-out; opacity: 0;}
-
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-01 {right: 50px; animation: alignNormal01 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-02 {right: 40px; animation: alignNormal02 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-03 {right: 20px; animation: alignNormal03 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-05 {top: 20px; right:2px; animation: alignNormal05 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-06 {top: 40px; animation: alignNormal06 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-07 {top: 60px; animation: alignNormal07 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-08 {top: 80px; animation: alignNormal08 1s alternate ease-in-out; opacity: 1;}
-  .ly-page.type-mb .wrap-nav h2 .mb-logo.page-02 span.txt-09 {top: 100px; right:2px; animation: alignNormal09 1s alternate ease-in-out; opacity: 1;}
-
-  @keyframes alignRight01 {
-    0% {right: 40px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignRight02 {
-    0% {right: 30px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignRight03 {
-    0% {right: 20px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignTop05 {
-    0% {top: 10px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop06 {
-    0% {top: 30px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop07 {
-    0% {top: 50px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop08 {
-    0% {top: 70px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop09 {
-    0% {top: 90px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-
-  @keyframes alignNormal01 {
-    0% {right:0; opacity:0;}
-    100% {right: 40px; opacity:1;}    
-  }
-  @keyframes alignNormal02 {
-    0% {right:0; opacity:0;}
-    100% {right: 30px; opacity:1;}    
-  }
-  @keyframes alignNormal03 {
-    0% {right:0; opacity:0;}
-    100% {right: 20px; opacity:1;}    
-  }
-  @keyframes alignNormal05 {
-    0% {top:0; opacity:0;}
-    100% {top: 10px; opacity:1;}     
-  }
-  @keyframes alignNormal06 {
-    0% {top:0; opacity:0;}
-    100% {top: 30px; opacity:1;}     
-  }
-  @keyframes alignNormal07 {
-    0% {top:0; opacity:0;}
-    100% {top: 50px; opacity:1;}     
-  }
-  @keyframes alignNormal08 {
-    0% {top:0; opacity:0;}
-    100% {top: 70px; opacity:1;}     
-  }
-  @keyframes alignNormal09 {
-    0% {top:0; opacity:0;}
-    100% {top: 90px; opacity:1;}     
-  }
-  /* .wrap-nav h2 .mb-logo.active span.txt-01,
-  .wrap-nav h2 .mb-logo.active span.txt-02,
-  .wrap-nav h2 .mb-logo.active span.txt-03 {animation: alignRight 0.6s alternate linear;}
-  .wrap-nav h2 .mb-logo.active span.txt-05,
-  .wrap-nav h2 .mb-logo.active span.txt-06,
-  .wrap-nav h2 .mb-logo.active span.txt-07,
-  .wrap-nav h2 .mb-logo.active span.txt-08,
-  .wrap-nav h2 .mb-logo.active span.txt-09  {top:0; opacity:0;} */
-  .wrap-gallery {display:block; margin:140px 0 0 0; padding:0 0 30px 0; box-sizing:border-box;}
-
-  .wrap-gallery.type-about,
-  .wrap-gallery.type-contact {padding: 190px 288px 0 300px; margin:0;}
-
-  .slick-slide img {width:100%; margin:6px auto; height:auto;}
-
-  .slick-slide {float:inherit; opacity:1 !important; left:0 !important;}
-  .txt-detail {position:absolute; top:0; left:20px;}
-  .detail-project .slick-prev, .detail-project .slick-next,
-  .list-arrow {display:none !important;}
-
-}
-
-@media (max-width: 1300px) {
-
-  .wrap-gallery.type-about,
-  .wrap-gallery.type-contact {padding: 190px 288px 0 300px; margin:0;}
-}
-
-@media (max-width: 1000px) { 
-
-  .list-about span {width:362px;}
-.list-about span.type-padding {width:254px;}
-.txt-contact {width:394px;}
-
-  .ly-page.type-project,
-  .ly-page.type-project {display:block;}
-
-  .wrap-gallery.type-about {margin-left: 0; padding:140px 20px 20px 20px;}
-  .wrap-gallery.type-contact {padding:140px 20px 20px 20px;}
-
-  .ly-page.type-main {height:100vh;}
-  .ly-page {height:auto;}
-
-  .txt-mainTit {writing-mode: horizontal-tb;}
-  .wrap-mainTit {justify-content: center; position:relative; padding:0 20px;}
-  .txt-mainTit a {font-size:4em; letter-spacing:8px; animation: fadein 1.2s alternate linear; }
-  .txt-mainTit.hide {display:none;}
-
-  .box-project {flex-direction:column;}
-  .box-project p {margin-top:8px;}
-
-  .wrap-nav ul {position:absolute; right:23px;}
-  .wrap-nav ul.hide {display:none;}
-  .wrap-nav ul li a {font-size:16px;}
-  .wrap-nav ul li {padding:8px 0;}
-
-  .wrap-gallery.type-project {padding:120px 20px; margin:0;}
-
-  .ly-page.type-project .txt-mainTit.hide {display:none;}
-  .ly-page.type-project .link-mbsub {display:block;}
-
-  a.link-mbsub {position:absolute; top:20px; left:20px; width:180px; z-index:999;}
-  a.link-mbsub.hide {display:none;}
-
-  .wrap-nav h2 .mb-logo {display:block; position:absolute; top:20px; right:20px; z-index:999;}
-  .wrap-nav h2 .mb-logo span {position:absolute; top:0; right:0; font-size:30px; opacity:0; font-weight:normal;}
-  .wrap-nav h2 .mb-logo span.txt-04 {opacity: 1;}
-  .wrap-nav h2 .mb-logo span.txt-01 {animation: alignRight01 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-02 {animation: alignRight02 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-03 {animation: alignRight03 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-05 {animation: alignTop05 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-06 {animation: alignTop06 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-07 {animation: alignTop07 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-08 {animation: alignTop08 1s alternate ease-in-out; opacity: 0;}
-  .wrap-nav h2 .mb-logo span.txt-09 {animation: alignTop09 1s alternate ease-in-out; opacity: 0;}
-
-  /* logo back */
-  .wrap-nav h2 .mb-logo.page-02 span.txt-01 {right: 50px; animation: alignNormal01 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-02 {right: 40px; animation: alignNormal02 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-03 {right: 20px; animation: alignNormal03 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-05 {top: 20px; right:2px; animation: alignNormal05 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-06 {top: 40px; animation: alignNormal06 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-07 {top: 60px; animation: alignNormal07 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-08 {top: 80px; animation: alignNormal08 1s alternate ease-in-out; opacity: 1;}
-  .wrap-nav h2 .mb-logo.page-02 span.txt-09 {top: 100px; right:2px; animation: alignNormal09 1s alternate ease-in-out; opacity: 1;}
-
-  @keyframes alignRight01 {
-    0% {right: 40px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignRight02 {
-    0% {right: 30px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignRight03 {
-    0% {right: 20px; opacity:1;}
-    100% {right:0; opacity:0;}    
-  }
-  @keyframes alignTop05 {
-    0% {top: 10px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop06 {
-    0% {top: 30px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop07 {
-    0% {top: 50px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop08 {
-    0% {top: 70px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-  @keyframes alignTop09 {
-    0% {top: 90px; opacity:1;}
-    100% {top:0; opacity:0;}     
-  }
-
-  @keyframes alignNormal01 {
-    0% {right:0; opacity:0;}
-    100% {right: 40px; opacity:1;}    
-  }
-  @keyframes alignNormal02 {
-    0% {right:0; opacity:0;}
-    100% {right: 30px; opacity:1;}    
-  }
-  @keyframes alignNormal03 {
-    0% {right:0; opacity:0;}
-    100% {right: 20px; opacity:1;}    
-  }
-  @keyframes alignNormal05 {
-    0% {top:0; opacity:0;}
-    100% {top: 10px; opacity:1;}     
-  }
-  @keyframes alignNormal06 {
-    0% {top:0; opacity:0;}
-    100% {top: 30px; opacity:1;}     
-  }
-  @keyframes alignNormal07 {
-    0% {top:0; opacity:0;}
-    100% {top: 50px; opacity:1;}     
-  }
-  @keyframes alignNormal08 {
-    0% {top:0; opacity:0;}
-    100% {top: 70px; opacity:1;}     
-  }
-  @keyframes alignNormal09 {
-    0% {top:0; opacity:0;}
-    100% {top: 90px; opacity:1;}     
-  }
+@media (max-width: 800px) { 
+ 
 }
 
 @media (max-width: 500px) { 
-  .txt-contact,
-  .list-about span  {width:330px; word-break: keep-all;}
+ 
  }
