--- a/css/style.css
+++ b/css/style.css
@@ -47,24 +47,6 @@ table {
 }
 a {color:#000; text-decoration:none;}
 
-/* Quesha */
-@font-face {
-    font-family: 'Quesha';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../fonts/Quesha.woff') format('woff') /* Modern Browsers */
-  }
-
-  /* Quesha */
-@font-face {
-  font-family: 'century';
-  font-style: normal;
-  font-weight: 400;
-  src: local(''),
-       url('../fonts/century_gothic-webfont.woff') format('woff') /* Modern Browsers */
-}
-
 @font-face {
   font-family: 'Noto Sans';
   font-style: normal;
@@ -78,65 +60,38 @@ a {color:#000; text-decoration:none;}
        url('../fonts/noto-sans-v27-latin-regular.svg#NotoSans') format('svg'); /* Legacy iOS */
 }
 
-.txt-ko {font-family: 'Noto Sans', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
+  /* century */
+  @font-face {
+    font-family: 'century';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/century_gothic-webfont.woff') format('woff') /* Modern Browsers */
+  }
   
 /* layout */
 
-body, html {background-color:#efe3c6; font-family: 'century','Courier New', Courier, monospace;}
-.ly-page {display: flex; box-sizing:border-box; height:100vh;}
-.wrap-mainTit {display:flex; width:100%; padding:0 20px; height:100%;  justify-content: center; box-sizing:border-box; align-items:center;}
-.txt-mainTit a {font-size:40px; letter-spacing:14px; font-weight:normal;}
+body, html {background-color:#efe3c6; font-family: 'century','Noto Sans','Courier New', Courier, monospace;}
+.ly-all {display: flex; box-sizing:border-box; flex-direction:column;}
+.ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 3s linear;
+  background-color:#efe3c6; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
+.txt-mainTit a {font-size:40px; letter-spacing:10px; font-weight:normal; animation: fadein linear 2s;}
 
-.wrap-nav {position:absolute; top:0; right:0; left:0; height:auto;}
-.wrap-nav h2 {position:relative; margin-bottom:30px;}
-.wrap-nav ul {position:fixed; top:180px; right:205px;}
-.wrap-nav ul li {padding:10px 0;}
-.wrap-nav ul li a {font-size:16px; letter-spacing:1.2px; transition: color 0.2s ease-in-out; font-weight:bold;}
-.wrap-nav ul li:hover a,
-.wrap-nav ul li.active a {color:#828283; text-decoration:underline;}
+.ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents.type-detail {padding:0 40px; box-sizing:border-box;}
 
-.wrap-gallery { width:100%; padding:190px 288px 0 0; margin-left:300px;}
-.wrap-gallery.type-project {padding:62px 288px 0 0;}
-.txt-detail {position:relative; margin-top: 5px;}
-.txt-detail p  {margin-bottom:12px; font-size:16px; text-decoration: underline;}
-.txt-detail ul li {margin-bottom:5px; font-size:12px;}
 
-.list-project {width:100%; padding:20px 0; box-sizing:border-box; height:868px; overflow-y:auto; -ms-overflow-style: none;}
-.list-project::-webkit-scrollbar{display:none;}
-.list-project {-ms-overflow-style: none;}
-.box-project {display:flex; margin-bottom:60px;}
-.box-project p {font-size:16px;}
-.box-project .data-image {width:300px; height:167px; margin-right:10px;}
-.box-project .data-image img {width:100%; height:100%;}
-.data-image:hover + p {color:#828283; text-decoration:underline;}
 
-.list-contact a {display:block; padding:10px 0; font-size:16px; transition: color 0.2s ease-in-out;}
-.list-contact a:hover  {color:#828283; text-decoration:underline;}
-.list-about b {display:block; padding:5px 0;}
-.list-about b.txt-title {display:block; padding:0; font-size:16px; font-weight:bold; text-decoration:underline;}
-.list-about span {display:block; width:71%; font-size:16px; line-height:24px;}
-.list-about span.type-padding {width:80%; padding:60px 0 150px 0;}
-.list-about p {margin-top:20px; font-size:30px; font-weight:bold;}
-.link-mbsub {position:fixed; top:80px; right:60px; font-weight:normal; font-size:50px; line-height:35px; font-family: 'Quesha','Courier New', Courier, monospace;}
 
-.txt-contact {display:block; padding-top:380px; font-size:22px; line-height:32px;}
-.list-project.active,
-.list-contact.active,
-.list-about.active,
-.wrap-nav.type-sub,
-.list-project,
-.detail-project,
-.txt-mainTit.type-fade,
-.txt-contact {animation: fadein 1.2s alternate linear;}
 
-.list-arrow {position:absolute; top:0; right:10px; z-index:9;}
-.list-arrow .img-arrow {position:absolute; top:0; right:40px; cursor:pointer;}
-.list-arrow .img-arrow:hover {opacity:0.8;}
-.list-arrow .img-arrow.next {right:5px;}
-.img-arrow {display:block; width:22px; height:9px; background:url(../images/img_arrow.png)no-repeat 0 0;}
-.img-arrow.next {transform: rotate(180deg);}
-.detail-project .slick-prev, .detail-project .slick-next {opacity:0; cursor: pointer;}
+@keyframes fadeout {
+  0% {opacity:1;}
+  70% {opacity:1;}
+  100% {opacity:0;}
+  
+}
+
 
 @keyframes fadein {
   0% {opacity:0;}
@@ -144,16 +99,10 @@ body, html {background-color:#efe3c6; font-family: 'century','Courier New', Cour
   
 }
 
-.detail-project {position:relative; width:970px;}
-.detail-project .slick-prev ,
-.detail-project .slick-next {position:absolute; bottom:-22px; z-index:999;}
-.detail-project .slick-prev {right:40px;}
-.detail-project .slick-next {right:0;}
-
 /* 스크롤바 설정*/
 
 html {
-  scrollbar-color: #95956a #7c7c45;
+  scrollbar-color: #95956a #a0a0a0;
   scrollbar-width: thin;
 }
 
@@ -169,11 +118,11 @@ html {
 }
 
 ::-webkit-scrollbar-track{
-  background-color: #7c7c45;
+  background-color: #a0a0a0;
 }
 
 ::-webkit-scrollbar-corner {
-  background-color: #7c7c45;
+  background-color: #a0a0a0;
 }
 
 ::-webkit-calendar-picker-indicator {
