--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 14px;
 	/* font: inherit; */
 	vertical-align: baseline;
 }
+em, i {font-style: normal;}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -60,26 +61,20 @@ a {color:#000; text-decoration:none;}
        url('../fonts/noto-sans-v27-latin-regular.svg#NotoSans') format('svg'); /* Legacy iOS */
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap');
 
-  /* century */
-  @font-face {
-    font-family: 'century';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../fonts/century_gothic-webfont.woff') format('woff') /* Modern Browsers */
-  }
-  
 /* layout */
 
-body, html {background-color:#efe3c6; font-family: 'century','Noto Sans','Courier New', Courier, monospace;}
+body, html {background-color:#efe3c6; font-family: 'Nanum Myeongjo', serif;}
 .ly-all {display: flex; box-sizing:border-box; flex-direction:column;}
 .ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 3s linear;
   background-color:#efe3c6; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
-.txt-mainTit a {font-size:40px; letter-spacing:10px; font-weight:normal; animation: fadein linear 2s;}
+.txt-mainTit a {font-size:40px; letter-spacing:5px; font-weight:normal; animation: fadein linear 2s;}
 
 .ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
-.ly-contents.type-detail {padding:0 40px; box-sizing:border-box;}
+.ly-contents.type-detail {padding:0 40px; box-sizing:border-box; align-items: center}
+
+b.txt-greet {width:30%; line-height:30px;}
 
 
 
