--- a/css/style.css
+++ b/css/style.css
@@ -48,39 +48,42 @@ table {
 }
 a {color:#000; text-decoration:none;}
 
-@font-face {
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-v27-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/noto-sans-v27-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/noto-sans-v27-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/noto-sans-v27-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/noto-sans-v27-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/noto-sans-v27-latin-regular.svg#NotoSans') format('svg'); /* Legacy iOS */
-}
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap');
 
 /* layout */
 
-body, html {background-color:#efe3c6; font-family: 'Nanum Myeongjo', serif;}
+body, html {background-color:#95c7c8; font-family: 'Jua', sans-serif;
+  background: linear-gradient(to bottom, #95c7c8, #bde0e1, #bde1d8);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+body:before{
+  content:'';
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: -1;
+  background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #bde1d8 75%);
+}
 .ly-all {display: flex; box-sizing:border-box; flex-direction:column;}
-.ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 3s linear;
-  background-color:#efe3c6; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
+.ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 2s linear;
+  background-color:#bde1d8; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
 .txt-mainTit a {font-size:40px; letter-spacing:5px; font-weight:normal;}
 
 .ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
-.ly-contents.type-main b,
-.ly-contents.type-main b em {font-size:30px; font-weight:lighter;}
-.ly-contents.type-main p {padding:10px 0; font-size:28px;}
-.ly-contents.type-main span {font-size:26px; color:#333;}
+.ly-contents.type-main b {font-weight:bold; color:#777; font-size:26px;}
+.ly-contents.type-main b p {font-size:26px; font-weight:lighter; color:#333;}
+.ly-contents.type-main p {padding:10px 0; font-size:18px;}
+.ly-contents.type-main span {font-size:16px; color:#333;}
 
 .ly-contents.type-detail {padding:0 40px; box-sizing:border-box; align-items: center}
+.ly-contents.type-detail strong {font-size:24px; color:#555; margin-bottom:20px;}
+.ly-contents.type-location p,
+.ly-contents.type-location span {font-size:18px;}
 
 b.txt-greet {max-width:500px; line-height:30px; font-weight:lighter;}
-
+.wrap-map {width:400px; height:400px; margin:20px auto; border:1px solid #999;}
 
 
 
