--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body, html {background-color:#e1d3bb; font-family: 'Noto Serif KR', sans-serif;
   background-size: 100%;
   background-repeat: no-repeat;
 }
-.ly-all {display: flex; box-sizing:border-box; flex-direction:column;}
+.ly-all {position:relative; display: flex; box-sizing:border-box; flex-direction:column; z-index:999;}
 .ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 2s linear;
   background-color:#d1c1aa; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
 .txt-mainTit a {font-size:40px; letter-spacing:5px; font-weight:normal;}
@@ -80,6 +80,7 @@ b.txt-greet {max-width:500px; line-height:30px; font-weight:lighter;}
 .bg-main {position:absolute; top:0; left:0; width:100%; height:100%;background: url(../images/bg_main.png)no-repeat 0 0;  background-size:contain;}
 .bg-main.type-inverse {left:inherit; right:0; transform: rotate(180deg);}
 
+.bg-all {position:fixed; top:0; left:0; width:100%; height:100%; opacity:0.25; z-index:1; background:url(../images/bg_all.png) repeat 0 0;}
 
 @keyframes fadeout {
   0% {opacity:1;}
