--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,9 @@ a {color:#352017; text-decoration:none;}
 
 /* layout */
 
-body, html {background-color:#e1d3bb; font-family: 'Noto Serif KR', sans-serif;
-  background: linear-gradient(to bottom, #e1d3bb, #d1c1aa, #af9985);
-  background-size: 100%;
-  background-repeat: no-repeat;
+body, html {background-color:#006bef; font-family: 'Noto Serif KR', sans-serif;
 }
 .ly-all {position:relative; display: flex; box-sizing:border-box; flex-direction:column; z-index:999;}
-.ly-page01 {position:absolute; top:0; left:0; right:0; bottom:0; opacity:0; display:flex; width:100%; padding:0 20px; height:100vh; animation: fadeout 2s linear;
-  background-color:#d1c1aa; justify-content: center; box-sizing:border-box; align-items:center; z-index:999;}
 .txt-mainTit a {font-size:40px; letter-spacing:5px; font-weight:normal;}
 
 .ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
@@ -77,22 +72,11 @@ body, html {background-color:#e1d3bb; font-family: 'Noto Serif KR', sans-serif;
 b.txt-greet {max-width:500px; line-height:30px; font-weight:lighter;}
 .wrap-map {width:400px; height:400px; margin:20px auto; border:1px solid #999;}
 
-.bg-main {position:absolute; top:0; left:0; width:100%; height:100%;background: url(../images/bg_main.png)no-repeat 0 0;  background-size:contain;}
-.bg-main.type-inverse {left:inherit; right:0; transform: rotate(180deg);}
-
-.bg-all {position:fixed; top:0; left:0; width:100%; height:100%; opacity:0.25; z-index:1; background:url(../images/bg_all.png) repeat 0 0;}
-
-@keyframes fadeout {
-  0% {opacity:1;}
-  70% {opacity:1;}
-  100% {opacity:0;}  
-}
-
 
 /* 스크롤바 설정*/
 
 html {
-  scrollbar-color: #6e523b #a0a0a0;
+  scrollbar-color: #006bef #ccc;
   scrollbar-width: thin;
 }
 
@@ -103,16 +87,16 @@ html {
 
 ::-webkit-scrollbar-thumb{
   height: 17%;
-  background-color:#6e523b;
+  background-color:#006bef;
   border-radius: 10px;  
 }
 
 ::-webkit-scrollbar-track{
-  background-color: #a0a0a0;
+  background-color: #ccc;
 }
 
 ::-webkit-scrollbar-corner {
-  background-color: #a0a0a0;
+  background-color: #ccc;
 }
 
 ::-webkit-calendar-picker-indicator {
