--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ time, mark, audio, video {
 	font-size: 16px;
 	/* font: inherit; */
 	vertical-align: baseline;
-  color:#1f1811;
+  color:#fff;
 }
 em, i {font-style: normal;}
 /* HTML5 display-role reset for older browsers */
@@ -60,9 +60,9 @@ body, html {background-color:#006bef; font-family: 'Noto Serif KR', sans-serif;
 .ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
 .ly-contents.type-main {position:relative;}
 .ly-contents.type-main p {padding:10px 0; font-size:18px;}
-.ly-contents.type-main b {padding:10px 0; font-weight:bold; color:#795e48; font-size:26px;}
-.ly-contents.type-main b p {font-size:26px; font-weight:lighter; color:#352017;}
-.ly-contents.type-main span {margin-top:20px; font-size:16px; color:#333;}
+.ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px;}
+.ly-contents.type-main b p {font-size:26px; font-weight:lighter;}
+.ly-contents.type-main span {margin-top:20px; font-size:16px;}
 
 .ly-contents.type-detail {padding:0 40px; box-sizing:border-box; align-items: center}
 .ly-contents.type-detail strong {font-size:24px; margin-bottom:20px;}
@@ -72,6 +72,11 @@ body, html {background-color:#006bef; font-family: 'Noto Serif KR', sans-serif;
 b.txt-greet {max-width:500px; line-height:30px; font-weight:lighter;}
 .wrap-map {width:400px; height:400px; margin:20px auto; border:1px solid #999;}
 
+
+.ly-contents.type-mind {}
+.list-mind {}
+.list-mind ul li {padding:4px 0;}
+.list-mind ul li input {opacity:0;}
 
 /* 스크롤바 설정*/
 
