--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ table {
 }
 a {color:#352017; text-decoration:none;}
 
+.mt10 {margin-top:10px;}
 .mt20 {margin-top:20px;}
 .mt30 {margin-top:30px;}
 
@@ -56,10 +57,19 @@ a {color:#352017; text-decoration:none;}
 
 body, html {background-color:#4130DF; font-family: 'Noto Serif KR', sans-serif;
 }
-.ly-all {position:relative; display: flex; padding:0 10px; box-sizing:border-box; flex-direction:column; z-index:999;}
-.txt-mainTit a {font-size:40px; letter-spacing:5px; font-weight:normal;}
+.ly-all {position:relative; display: flex; padding:0 10px; box-sizing:border-box;
+  align-items: center; flex-direction:column; z-index:999;}
 
 .ly-contents > strong {margin-bottom:20px; line-height:26px; font-size: 20px;}
+
+.ly-contents.type-fixed {position:fixed; z-index:999; top:0; bottom:0; left:0; right:0; background-color:#64a6f6;
+animation:fade-out 3s ease-in forwards;}
+
+@keyframes fade-out {
+  0% {opacity:1;}
+  50% {opacity:1;}
+  100% {opacity:0; visibility:hidden;}
+}
 
 .txt-greet {max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
@@ -67,6 +77,14 @@ body, html {background-color:#4130DF; font-family: 'Noto Serif KR', sans-serif;
 .txt-greet i {display:block; line-height:22px;}
 
 .ly-contents {display:flex; width:100%; height:100vh; flex-direction:column; text-align:center; justify-content: center;}
+
+.ly-contents.type-userinfo p,
+.ly-contents.type-userinfo span {margin:10px 0; font-size:20px; line-height:26px;}
+.ly-contents.type-userinfo .btn-userinfo {width:120px; height:40px; margin:30px auto;
+border-radius:30px; line-height:40px; border:1px solid #ccc; background:none; color:#fff;}
+
+.wrap-input input {width:100px; height:30px; background:none; border:none; border-bottom:2px solid #fff; }
+
 .ly-contents.type-main {position:relative;}
 .ly-contents.type-main p {padding:10px 0; font-size:18px;}
 .ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px;}
@@ -89,6 +107,7 @@ body, html {background-color:#4130DF; font-family: 'Noto Serif KR', sans-serif;
 .wrap-accountnum button {border-radius:3px; border:1px solid #fff; color:#fff; background:#4130DF;}
 
 .ly-contents.type-location > p {margin:5px 0; font-size:16px;}
+
 
 /* photo silder */
 .slick-list {max-width:500px; height:500px; border:1px solid #ccc;}
