--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,8 @@ a {color:#352017; text-decoration:none;}
 /* layout */
 
 body, html {background-color:#56dfcc; font-family: 'Noto Serif KR', sans-serif;
-}
-.ly-all {position:relative; display: flex; max-width:800px; box-sizing:border-box;
+  margin:0 auto; max-width:800px;}
+.ly-all {position:relative; display: flex; box-sizing:border-box;
   align-items: center; flex-direction:column; z-index:999;}
 
 .ly-contents {padding:0 10px;}
@@ -113,7 +113,7 @@ color: rgba(0,0,0,0);}
 .ly-contents.type-detail {padding:0 40px; box-sizing:border-box; align-items: center}
 .ly-contents.type-location p,
 .ly-contents.type-location span {font-size:18px;}
-.wrap-map {min-width:400px; width:400px; height:400px; margin:20px auto;}
+.wrap-map {min-width:340px; width:400px; height:400px; margin:20px auto;}
 .wrap-map img {width:100%;}
 
 .list-maps {}
