--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ a {color:#352017; text-decoration:none;}
 
 .txt-md {font-size:16px !important;}
 .color-gr {color:#555 !important;}
+.color-lgr {color:#ddd !important;}
 
 /* layout */
 
