--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ animation:fade-out 2.4s linear forwards;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
 line-height:40px; color:#fff; background: rgba(255,255,255,0.2); border-radius:10px; cursor: pointer;}
 
-
 .wrap-input {position:relative; width:120px; margin:10px auto; padding:0 0 10px 100px; box-sizing:border-box; border-bottom:2px solid #fff;}
 .wrap-input input {position:absolute; top:0; right:20px; width:100px; height:36px; z-index:9; background:none; border:none; box-sizing:border-box;
 color: rgba(0,0,0,0);}
@@ -105,8 +104,8 @@ color: rgba(0,0,0,0);}
   font-size: 22px; z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
 
 .ly-contents.type-main {position:relative; opacity:0; animation: fade-in 4s forwards linear;}
-.ly-contents.type-main p {padding:3px 0; letter-spacing:1.3px; font-size:18px;}
-.ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px; color:#555;}
+.ly-contents.type-main p {padding:3px 0; letter-spacing:1.1px; font-size:16px;}
+.ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px; color:#dcdcdc;}
 .ly-contents.type-main b i {display:block; padding:8px 0; font-size:22px; color:#fff;}
 .ly-contents.type-main span {margin-top:10px; font-size:16px;}
 
