--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ animation:fade-out 2.4s linear forwards;}
 .txt-greet em {display:block; font-size:14px; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
-.ly-contents {display:flex; width:100%; height:98vh; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents {display:flex; width:100%; height:auto; min-height:100vh; flex-direction:column; text-align:center; justify-content: center;}
 
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; font-size:22px; line-height:26px;}
