--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,13 @@ a {color:#352017; text-decoration:none;}
 .mt30 {margin-top:30px;}
 
 .txt-md {font-size:16px !important;}
-.color-gr {color:#555 !important;}
+.color-gr {color:#3a5764 !important;}
 .color-lgr {color:#ddd !important;}
 
 /* layout */
 
 body, html {background-color:#3FADBC; font-family: 'Noto Serif KR', sans-serif;
-  margin:0 auto; max-width:800px;}
+  margin:0 auto; max-width:800px; }
 .ly-all {position:relative; display: flex; box-sizing:border-box;
   align-items: center; flex-direction:column; z-index:999;}
 
@@ -73,8 +73,8 @@ animation:fade-out 2.4s linear forwards;}
 @keyframes fade-out {
   0% {opacity:1; top:0;}
   40% {opacity:1;}
-  60% {opacity:0.4; top:-50px;}
-  80% {opacity:0.2; top:-80px; position:relative; visibility: hidden;}
+  60% {opacity:0.8; top:-50px;}
+  80% {opacity:0.4; top:-80px; position:relative; visibility: hidden;}
   100% {opacity:0;  top:-100px; display:none;}
 }
 
@@ -85,11 +85,11 @@ animation:fade-out 2.4s linear forwards;}
 }
 
 .txt-greet {margin-top:10px; max-width:80%;}
-.txt-greet b {display:block; text-align:left; color:#555;}
+.txt-greet b {display:block; text-align:left;}
 .txt-greet em {display:block; font-size:14px; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
-.ly-contents {display:flex; width:100%; height:auto; min-height:100vh; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents {display:flex; width:100%; height:auto; min-height:100vh; overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
 
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; font-size:22px; line-height:26px;}
