--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {color:#352017; text-decoration:none;}
 
 /* layout */
 
-body {min-height: calc(100vh-70px); min-height: -webkit-fill-available;}
+body {min-height: calc(100vh - 70px); min-height: -webkit-fill-available;}
 body, html {background-color:#3FADBC; font-family: 'Noto Serif KR', sans-serif;
   margin:0 auto; max-width:800px; }
 .ly-all {position:relative; display: flex; box-sizing:border-box;
@@ -69,28 +69,26 @@ body, html {background-color:#3FADBC; font-family: 'Noto Serif KR', sans-serif;
 .ly-contents > strong > span {margin-bottom:20px; line-height:30px; font-size: 20px;}
 
 .ly-contents.type-fixed {position:absolute; z-index:999; top:0; bottom:0; left:0; right:0; background-color:#3FADBC;
-animation:fade-out 2.4s linear forwards;}
+animation:fade-out 2.6s linear forwards;}
 
 @keyframes fade-out {
-  0% {opacity:1; top:0;}
-  40% {opacity:1;}
-  60% {opacity:0.8; top:-50px;}
-  80% {opacity:0.4; top:-80px; position:relative; visibility: hidden;}
-  100% {opacity:0;  top:-100px; display:none;}
+  0% {top:-10px;}
+  50% {top:-40px; }
+  100% {opacity:0;  top:-80px; display:none;} 
 }
 
 @keyframes fade-in {
   0% {opacity:0;}
   50% {opacity:0.2;}
   100% {opacity:1;}
-}
+}d
 
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
 .txt-greet em {display:block; font-size:14px; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
-.ly-contents {display:flex; width:100%; height:auto; min-height:100vh; overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents {display:flex; width:100%; height:auto; min-height:calc(100vh - 70px); overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
 
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; font-size:22px; line-height:26px;}
@@ -104,7 +102,7 @@ color: rgba(0,0,0,0);}
 .wrap-input b {position:absolute; top:0; right:20px; width:100px; height:36px;line-height: 25px;
   font-size: 22px; z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
 
-.ly-contents.type-main {position:relative; opacity:0; animation: fade-in 4s forwards linear;}
+.ly-contents.type-main {position:relative; opacity:0; animation: fade-in 4s forwards ease;}
 .ly-contents.type-main p {padding:3px 0; letter-spacing:1.1px; font-size:16px;}
 .ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px; color:#dcdcdc;}
 .ly-contents.type-main b i {display:block; padding:8px 0; font-size:22px; color:#fff;}
