--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ a {color:#352017; text-decoration:none;}
 
 /* layout */
 
-body {min-height: calc(100vh - 70px); min-height: -webkit-fill-available;}
 body, html {background-color:#3FADBC; font-family: 'Noto Serif KR', sans-serif;
   margin:0 auto; max-width:800px; }
 .ly-all {position:relative; display: flex; box-sizing:border-box;
@@ -99,8 +98,9 @@ animation:fade-out-bg 4s ease-in forwards; opacity:1;}
 .txt-greet em {display:block; font-size:14px; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
-.ly-contents {display:flex; width:100%; height:auto; min-height:calc(100vh - 70px); overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
+.ly-contents {display:flex; width:100%; padding: 30px 0; height:auto; overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
 
+.ly-contents.type-userinfo {height:calc(100vh - 70px)}
 .ly-contents.type-userinfo p,
 .ly-contents.type-userinfo span {margin:10px 0; font-size:22px; line-height:26px;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
